--- a/fronted/package.json
+++ b/fronted/package.json
@@ -36,9 +36,11 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
+    "swagger-ui-express": "^5.0.1",
     "sweetalert2": "^11.7.11",
     "swiper": "^7.4.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
