--- a/fronted/.env.local
+++ b/fronted/.env.local
@@ -4,3 +4,5 @@ VITE_PROJECTID=yogaweb-eeaf0
 VITE_STORAGEBUCKET=yogaweb-eeaf0.firebasestorage.app
 VITE_MESSAGINGSENDERID=811322883891
 VITE_APPID=1:811322883891:web:0abd9a139b5f4628b9c846
+VITE_STRIPKEY=pk_test_51J0ZQbK5Q7ZQ7ZQbK5Q7ZQ7ZQbK5  // Stripe key for payment to implement
+VITE_IMG_TOKEN=61b5add2b0988192e845eeed8996c853
